# pyairtouch3

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pyairtouch3/: __init__.py  airtouch_aircon.py  client.py  discovery.py  message_constants.py  message_response_parser.py
tests/: __init__.py  test_airtouch_message.py  test_client.py  test_discovery.py  test_message_response_parser.py  test_models.py
